--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header><h1 class="text-5xl font-bold mb-4 text-center">Phone Paradise</h1></header>
-    <main>
+    <header><h1 class="lg:text-5xl text-3xl text-amber-600 font-bold mb-4 text-center">Phone Paradise</h1></header>
+    <main class="">
         <section class="bg-gray-100 p-4 m-4 mb-9 flex">
             <input id="srch-field" type="text" placeholder="Search here" class=" input-bordered w-full max-w-xs px-5 py-2 rounded focus:outline-none rounded-r-none" />
             <button onclick="handleSearch()" class="px-5 py-2 bg-orange-400 rounded rounded-l-none">Search</button>
