--- a/index.html
+++ b/index.html
@@ -13,17 +13,57 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header><h1 class="lg:text-5xl text-3xl text-amber-600 font-bold mb-4 text-center">Phone Paradise</h1></header>
+    <header>
+      <h1
+        class="lg:text-5xl text-3xl text-amber-600 font-bold mb-4 text-center"
+      >
+        Phone Paradise
+      </h1>
+    </header>
     <main class="">
-        <section class="bg-gray-100 p-4 m-4 mb-9 flex">
-            <input id="srch-field" type="text" placeholder="Search here" class=" input-bordered w-full max-w-xs px-5 py-2 rounded focus:outline-none rounded-r-none" />
-            <button onclick="handleSearch()" class="px-5 py-2 bg-orange-400 rounded rounded-l-none">Search</button>
-        </section>
-        <section class="mx-auto w-11/12">
-            <div id="phn-contyner" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 justify-center items-center">
-                
-            </div>
-        </section >
+      <!--  -->
+      <section class="bg-gray-100 p-4 m-4 mb-9 flex">
+        <input
+          id="srch-field"
+          type="text"
+          placeholder="Search here"
+          class="input-bordered w-full max-w-xs px-5 py-2 rounded focus:outline-none rounded-r-none"
+        />
+        <button
+          onclick="handleSearch()"
+          class="px-5 py-2 bg-orange-400 rounded rounded-l-none hover:bg-rose-400"
+        >
+          Search
+        </button>
+      </section>
+      <!--  -->
+      <!--  -->
+      <section class="mx-auto w-11/12">
+        <div
+          id="phn-contyner"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 justify-center items-center"
+        ></div>
+        <!--  -->
+        <!--  -->
+        <!-- Spinner Loader -->
+        <div class="flex justify-center mt-48">
+          <span
+            class="loading loading-spinner loading-lg text-amber-700 hidden" id="loading-spinner"
+          ></span>
+        </div>
+        <!--  -->
+        <!--  -->
+        <!--  -->
+        <!--  -->
+        <div class="flex justify-center">
+          <button
+            class="btn btn-active btn-secondary hover:bg-rose-400 text-white hidden mt-10"
+            id="btn-show-all"
+          >
+            Show All
+          </button>
+        </div>
+      </section>
     </main>
 
     <script src="js/phone.js"></script>
