implement show all button to display all data

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!--  -->
         <!--  -->
         <!-- Spinner Loader -->
-        <div class="flex justify-center mt-48">
+        <div class="flex justify-center mt-8">
           <span
             class="loading loading-spinner loading-lg text-amber-700 hidden" id="loading-spinner"
           ></span>
@@ -56,7 +56,7 @@
         <!--  -->
         <!--  -->
         <div class="flex justify-center">
-          <button
+          <button onclick="handleShowAll()"
             class="btn btn-active btn-secondary hover:bg-rose-400 text-white hidden mt-10"
             id="btn-show-all"
           >
