--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
           </button>
         </div>
       </section>
+
+      <!-- Show Modal -->
+      <section>
+        <!-- Open the modal using ID.showModal() method -->
+<button class="btn" onclick="my_modal_5.showModal()">open modal</button>
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+  <form method="dialog" class="modal-box">
+    <h3 class="font-bold text-lg">Hello!</h3>
+    <p class="py-4">Press ESC key or click the button below to close</p>
+    <div class="modal-action">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn">Close</button>
+    </div>
+  </form>
+</dialog>
+      </section>
     </main>
 
     <script src="js/phone.js"></script>
