--- a/index.html
+++ b/index.html
@@ -68,14 +68,19 @@
       <!-- Show Modal -->
       <section>
         <!-- Open the modal using ID.showModal() method -->
-<button class="btn" onclick="my_modal_5.showModal()">open modal</button>
-<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
-  <form method="dialog" class="modal-box">
-    <h3 class="font-bold text-lg">Hello!</h3>
-    <p class="py-4">Press ESC key or click the button below to close</p>
-    <div class="modal-action">
+
+<dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle h-auto">
+  <form method="dialog" class="modal-box h-auto">
+    <div class="h-auto">
+      <h3 class="font-bold text-2xl text-center" id="phone-name">Hello!</h3>
+    <div id="show-details-container" class="text-justify">
+
+    </div>
+   
+    <div class="modal-action flex flex-col items-center">
       <!-- if there is a button in form, it will close the modal -->
-      <button class="btn">Close</button>
+      <button class="btn ">Close</button>
+    </div>
     </div>
   </form>
 </dialog>
@@ -84,4 +89,8 @@
 
     <script src="js/phone.js"></script>
   </body>
+
+
+
+
 </html>
